--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,10 @@ server:
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: 'jdbc:h2:mem:test'
+    url: 'jdbc:h2:mem:testdb'
     username: sa
     password:
+    generate-unique-name: false
 
   h2:
     console:
